--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>Composite</module>
         <module>Decorator</module>
+        <module>AbstractFactory</module>
     </modules>
 
     <properties>
