--- a/Composite/pom.xml
+++ b/Composite/pom.xml
@@ -9,19 +9,23 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>org.example</groupId>
     <artifactId>Composite</artifactId>
-
-    <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-    </properties>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
+    <name>Composite</name>
 
     <dependencies>
         <dependency>
             <groupId>org.example</groupId>
             <artifactId>AbstractFactory</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
+    <properties>
+        <maven.compiler.source>14</maven.compiler.source>
+        <maven.compiler.target>14</maven.compiler.target>
+    </properties>
 
 </project>
