add state design pattern code

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
         <module>Decorator</module>
         <module>AbstractFactory</module>
         <module>Command</module>
+        <module>Iterator</module>
+        <module>State</module>
     </modules>
 
     <properties>
